<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".ui.SplashActivity">

    <LinearLayout
        android:id="@+id/logo_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logo_margin_top"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/logo_login"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin"
            android:src="@drawable/logo_mart9_bag" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_mart9" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_container"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginTop="@dimen/dimen_30"
        android:layout_marginRight="@dimen/activity_margin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFEB6E"
            android:padding="8dp"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#FFEB6E"
                android:hint="@string/hint_email"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textCursorDrawable="@null" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:background="#FFEB6E"
            android:padding="8dp"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#FFEB6E"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textCursorDrawable="@null" />

        </android.support.design.widget.TextInputLayout>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_30"
            android:layout_marginBottom="@dimen/dimen_30"
            android:visibility="invisible"
            app:indicatorColor="@android:color/black"
            app:indicatorName="BallPulseIndicator" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:text="@string/login"
            android:theme="@style/ButtonBlack" />
    </LinearLayout>

</RelativeLayout>